--- a/SoftbodySim/SoftbodySim.vcxproj
+++ b/SoftbodySim/SoftbodySim.vcxproj
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>D:\SDL2-2.0.14\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\SDL2-2.0.14\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\SDL2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\SDL2\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -149,12 +149,14 @@
     <ClCompile Include="context.cpp" />
     <ClCompile Include="event_handler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="spring.cpp" />
     <ClCompile Include="vertex.cpp" />
     <ClCompile Include="vertex_list.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.h" />
     <ClInclude Include="event_handler.h" />
+    <ClInclude Include="spring.h" />
     <ClInclude Include="vertex.h" />
     <ClInclude Include="vertex_list.h" />
   </ItemGroup>
