--- a/SoftbodySim/SoftbodySim.vcxproj.filters
+++ b/SoftbodySim/SoftbodySim.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="event_handler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="spring.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vertex.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="event_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spring.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
